--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
         <nav class="navigator">
             <h3 class="site-name">Hong</h3>
             <ul>
-                <li><a href="home.html" class="nav-menu">Work</a></li>
+                <li><a href="index.html" class="nav-menu">Work</a></li>
                 <li><a href="info.html" class="nav-menu">Info</a></li>
             </ul>
         </nav>
