--- a/news2.html
+++ b/news2.html
@@ -17,7 +17,7 @@
         </nav>
     </div>
     <div class="news-header">
-        <h1>FOOTBALL NEWS</h1>
+        <h1>BASKETBALL NEWS</h1>
     </div>    
     <article class="page1">
         <div class="news1">
@@ -42,7 +42,5 @@
         </div>        
         </div>
     </article>
-    <button class="next" type="button" onclick="nextPage()">></button>
-    <script src="home.js"></script>
 </body>
 </html>
