--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <h2>설명</h2>
                     <p>신문지 느낌을 주기위해 신문지, 재생지 같은 계열의 배경색으로 지정하였고, <br> CSS를 활용해 흑백사진에 마우스 커서를 사진위에 올리면 원래 사진의 색으로 전환되게 만들었습니다.</p>
                 </div>
+                <div>
+                    <a href="record.html">녹화</a>
+                </div>
             </div>
         </div>
         <footer class="work-footer">
